card margin bottom on mobile fix

--- a/src/scss/sections/offer/_offer.scss
+++ b/src/scss/sections/offer/_offer.scss
@@ -39,10 +39,10 @@ $secondary__offer: $color__fourth;
         top: 100%;
 	}
 	& .card {
-		margin-bottom: 0;
 		width: 100%;
 		text-align: center;
 		@include tablet {
+			margin: 0;
 			max-width: 50%;
 			text-align: left;
 		}
